# JUCE_CLion_CMake_Template_03.08.25

./: .gitignore  CMakeLists.txt
Plugin/: CMakeLists.txt
Plugin/Source/: PluginEditor.cpp
